--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Calculator</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <script src="./script.js"></script>
+    <div class="main-container">
+        <div class="calculator">
+            <div class="calculator-display"></div>
+            <div class="calculator-buttons">
+                <button class="number-button">1</button>
+                <button class="number-button">2</button>
+                <button class="number-button">3</button>
+                <button class="number-button">4</button>
+                <button class="number-button">5</button>
+                <button class="number-button">6</button>
+                <button class="number-button">7</button>
+                <button class="number-button">8</button>
+                <button class="number-button">9</button>
+                <button class="number-button">0</button>
+                <button class="operator-button">+</button>
+                <button class="operator-button">-</button>
+                <button class="operator-button">*</button>
+                <button class="operator-button">/</button>
+                <button class="equal-button">=</button>
+            </div>
+        </div>
+    </div>
+    <!--- <script src="./script.js"></script> -->
 </body>
 </html>
