Add clear button

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
                 <button class="operator-button">*</button>
                 <button class="operator-button">/</button>
                 <button class="equal-button">=</button>
+                <button class="clear-button">C</button>
             </div>
         </div>
     </div>
-    <!--- <script src="./script.js"></script> -->
+    <script src="./script.js"></script>
 </body>
 </html>
