Add event listeners for buttons
Calculator can now perform basic equations which involve unit numbers

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="main-container">
         <div class="calculator">
-            <div class="calculator-display"></div>
+            <div class="calculator-display">
+                <p class="display-equation">0</p>
+            </div>
             <div class="calculator-buttons">
                 <button class="number-button">1</button>
                 <button class="number-button">2</button>
