Add delete function

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <button class="operator-button">/</button>
                 <button class="equal-button">=</button>
                 <button class="clear-button">C</button>
+                <button class="delete-button">DEL</button>
             </div>
         </div>
     </div>
