Add decimal point button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <button class="equal-button">=</button>
                 <button class="clear-button">C</button>
                 <button class="delete-button">DEL</button>
+                <button class="decimal-button">.</button>
             </div>
         </div>
     </div>
