Add function to turn number negative

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
                 <button class="number-button">9</button>
                 <button class="number-button">0</button>
                 <button class="decimal-button">.</button>
-                <button class="equal-button">=</button>
+                <button class="negative-button">+/-</button>
                 <button class="operator-button">+</button>
                 <button class="operator-button">-</button>
                 <button class="operator-button">*</button>
                 <button class="operator-button">/</button>
+                <button class="equal-button">=</button>
                 <button class="delete-button">DEL</button>
                 <button class="clear-button">C</button>
             </div>
